# AuroraPulse

./: .gitignore  LICENSE  README.md  secrets.toml
aurora-pulse/: Dockerfile  __main__.py  aurora_data.json  docker-compose.yaml  main.py  pyproject.toml
aurora-pulse/.streamlit/: config.toml
aurora-pulse/src/backend/: config.py  db.py  enqueue_job.py  fetch_data.py  geocode_location.py  nearest_neighbour.py  notifier.py  process_data.py  scheduler.py
aurora-pulse/src/backend/redis_handler/: redis_conn.py  rq_tasks.py  rq_worker.py
aurora-pulse/src/frontend/: style.py
aurora-pulse/tests/: test_db.py  test_fetch_data.py  test_nearests_neighbour.py  test_rq.py
