[project]
name = "aurora-pulse"
version = "0.1.0"
description = "Catch the aurora before it fades—alerts that keep you in the glow!"
authors = [
    { name = "Shreayan Chaudhary", email = "shreayan98c@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "authlib==1.6.5",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "loguru>=0.7.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.26.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
